fixed title color scheme on smallest media query

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -710,7 +710,7 @@ section {
   width: 100%;
   padding-top: 1vw;
   margin: 0;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   
 }
 .title h2 {
@@ -718,7 +718,7 @@ section {
   padding: 0;
   font-stretch: wider;
   margin: 0;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   text-shadow: -0.1vw 0.1vw 0 var(--tertiary-color),
    0.1vw 0.1vw 0 var(--tertiary-color),
   0.1vw -0.1vw 0 var(--tertiary-color),
